--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 @media screen and (max-width: 600px) {
-    .categories-container, .gift-container, .deals-container {
+    .categories, .gifts, .deals {
         grid-template-columns: repeat(2, 1fr); /* Show 2 items per row */
     }
 }
